# FumeWeb

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.example.json  config.example.py  config.py  factory.py  forms.py  launcher.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: lint.yml
assets/css/: dropdown.css  main.css  noscript.css  slider.css
assets/js/: noty.js
blueprints/: __init__.py
blueprints/auth/: __init__.py  routes.py
blueprints/dashboard/: __init__.py  routes.py
blueprints/fumeguard/: __init__.py  routes.py
blueprints/fumetool/: __init__.py  routes.py
blueprints/fumetune/: __init__.py  routes.py
blueprints/meta/: __init__.py  routes.py
blueprints/payments/: __init__.py
templates/: footer.html  header.html  navbar.html  scripts.html
templates/dashboard/: app.html
templates/fumeguard/: app.html  index.html  profile-home.html  profile-update.html  settings-home.html  settings-update.html  settings.html
templates/fumetool/: app.html  index.html
templates/fumetune/: app.html  index.html
templates/meta/: index.html  maintenance.html  premium.html  privacy.html  terms.html
