[project]
name = "FumeWeb"
version = "1.0.0"
description = "Web dashboard for all the FumeStop services."
license = "AGPL-3.0"
authors = [
    { name="Sayan Bhattacharyya", email="sayan@sn1f3rt.dev" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py==2.7.1",
    "fumestop-ext-ipc==1.0.0",
    "quart==0.20.0",
    "quart-wtforms==1.0.3",
    "quartcord==1.0.1",
]

[project.optional-dependencies]
speed = [
    "uvloop==0.22.1",
]

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "ruff==0.15.15",
]

[tool.ruff]
line-length = 85
target-version = "py312"

[tool.ruff.lint.isort]
section-order = ["future", "typing", "standard-library", "third-party", "discord", "first-party", "local-folder", "config"]
force-wrap-aliases = true
combine-as-imports = true
length-sort = true

[tool.ruff.lint.isort.sections]
"config" = ["config"]
"discord" = ["discord"]
"typing" = ["typing"]
